--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 <body>
-<!-- Navbar (sit on top) -->
+<!-- Barra de navegação -->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-wide w3-padding w3-card">
     <a href="#home" class="w3-bar-item w3-button"><b>Pilares</b> Engenharia</a>
-    <!-- Float links to the right. Hide them on small screens -->
+    <!-- Links a direita.-->
     <div class="w3-right w3-hide-small">
       <a href="#projects" class="w3-bar-item w3-button">Projetos</a>
       <a href="#about" class="w3-bar-item w3-button">Sobre</a>
@@ -22,7 +22,7 @@
 </div>
 
 <!-- Header -->
-<!-- Automatic Slides Images -->
+<!-- Slides automáticos das imagens -->
 <div class="mySlides w3-display-container w3-center">
   <img src="imagem/logo12.jpeg" style="width:100%">
   <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
@@ -43,10 +43,10 @@
 </div>
 
 
-<!-- Page content -->
+<!-- Conteúdo da página dos projetos -->
 <div class="w3-content w3-padding" style="max-width:1564px">
 
-  <!-- Project Section -->
+  <!-- Seção dos projetos -->
   <div class="w3-container w3-padding-32" id="projects">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Projetos</h3>
   </div>
@@ -55,25 +55,25 @@
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">Arquitetônico</div>
-        <img src="imagem/Arquitetônico2.png" alt="House" style="width:100%">
+        <img src="imagem/Arquitetônico2.png" alt="Arquitetônico" style="width:100%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">Elétrico</div>
-        <img src="imagem/Elétrico2.png" alt="House" style="width:100%">
+        <img src="imagem/Elétrico2.png" alt="Elétrico" style="width:100%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">Hidráulico</div>
-        <img src="imagem/Hidraulico2.jpg" alt="House" style="width:100%">
+        <img src="imagem/Hidraulico2.jpg" alt="Hidráulico" style="width:100%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">Sanitario</div>
-        <img src="imagem/Sanitario1.jpeg" alt="House" style="width:100%">
+        <img src="imagem/Sanitario1.jpeg" alt="Sanitario" style="width:100%">
       </div>
     </div>
   </div>
@@ -81,30 +81,30 @@
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">Estrutural</div>
-        <img src="imagem/Estrutural2.jpeg" alt="House" style="width:99%">
+        <img src="imagem/Estrutural2.jpeg" alt="Estrutural" style="width:99%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">PPCI</div>
-        <img src="imagem/PPCI2.jpg" alt="House" style="width:99%">
+        <img src="imagem/PPCI2.jpg" alt="PPCI" style="width:99%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">As Built</div>
-        <img src="imagem/asbuilt12.jpeg" alt="House" style="width:99%">
+        <img src="imagem/asbuilt12.jpeg" alt="As Built" style="width:99%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">Orçamento</div>
-        <img src="imagem/Orçamento12.jpeg" alt="House" style="width:99%">
+        <img src="imagem/Orçamento12.jpeg" alt="Orçamento" style="width:99%">
       </div>
     </div>
   </div>
 
-  <!-- About Section -->
+  <!-- Sobre -->
   <div class="w3-container w3-padding-32" id="about">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Sobre</h3>
     <p>A Pilares Engenharia é uma empresa júnior fundada em 2015, na UFERSA, na área da Engenharia Civil, na cidade de Caraúbas-RN. A empresa é formada e gerida por estudantes do curso de Engenharia Civil que conta com a fiscalização  de professores da área, que revisão, avaliam os projetos dos alunos e também ajudam na administração e no funcionamento da mesma. 
@@ -148,7 +148,7 @@
     </div>
   </div>
 
-  <!-- Contact Section -->
+  <!-- Seção de contatos -->
   <div class="w3-container w3-padding-32" id="contact">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Contatos</h3>
     <p>Entre em contato com nossa empresa para saber mais sobre nossos projetos.</p>
@@ -167,17 +167,17 @@
     </form>
   </div>
   
-<!-- Image of location/map -->
+<!-- Maps -->
 <div class="w3-container w3-padding-32" id="Maps">
   <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Maps</h3>
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4047.111764491428!2d-37.5732710249009!3d-5.773278656992228!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ba9030681bdea5%3A0xae8dac9c94799331!2sUFERSA%20Cara%C3%BAbas%20-%20Bloco%20Administrativo!5e1!3m2!1spt-BR!2sbr!4v1699030723429!5m2!1spt-BR!2sbr" width="1500" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </div>
 
-<!-- End page content -->
+<!-- Conteúdo do final da página-->
 </div>
 
 
-<!-- Footer -->
+<!-- Rodapé do site -->
 <footer class="w3-center w3-black w3-padding-16">
    <p>Desenvolvido por Thalita</p>
 </footer>
